Fix overflow screen

--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@ body {
   background-color: white;
   color: black;
   font-family: Lato, sans serif;
-  padding: 20;
-  margin: 20;
-  min-height: 100dvh;
+  padding: 0px;
+  margin: 0px;
+  min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
+  grid-gap: 20px;
 }
 
 
@@ -35,10 +36,14 @@ body {
   .columns {
     flex-direction: column;
   }
+  .wrapper {
+      padding: 20px;
+      box-sizing: border-box;
+  }
 }
 @viewport {
-  width: device-width ;
-  zoom: 1.0 ;
+  width: device-width;
+  zoom: 1.0;
 }
 
 
@@ -46,25 +51,25 @@ body {
 /* The real design tweaking */
 .wrapper {
   height: 100%;
+  width: 100%;
 }
 h1 {
   text-align: center;
 }
 p {
+  text-align: justify;
 }
 .banner {
   display: flex;
   justify-content: center;
-  margin: 1em;
+  padding: 20px 20px;
 }
 .banner img {
   max-height: 100px;
   max-width: 100%;
-  margin: 1em;
 }
 .footer {
-  width: 100%;
-  padding: 10px;
+  padding: 20px;
 }
 
 .cards {
